--- a/HoaBanTravel/HoaBanTravel/Views/Home/Index.cshtml
+++ b/HoaBanTravel/HoaBanTravel/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
         <!--Danh sách tour-->
         <div class="cactour col-xs-12 col-sm-12 col-md-12 col-lg-12">
             <!--Tour-->
-            <div id="tour" class="tour col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="tour col-xs-12 col-sm-6 col-md-4 col-lg-4">
                 <img src="~/Content/images/trangchu/avt-tour-1.png" alt="" class="img-responsive" />
                 <div class="thongtin row">
                     <div class="text">
@@ -29,7 +29,9 @@
                             <p class="giatien">35.000.000 vnđ</p>
                         </div>
                     </div>
-                    <a href="@Url.Action("Chitiettour","Home")" id="xemthem" class="xemthem pull-right">Đăng ký</a>
+                    <div class="xemthem">
+                        <a href="@Url.Action("Chitiettour","Home")" id="xemthem" class="pull-right">Đăng ký</a>
+                    </div>
                 </div>
             </div>
             <!--Tour-->
@@ -46,7 +48,9 @@
                             <p class="giatien">50.000.000 vnđ</p>
                         </div>
                     </div>
-                    <a href="@Url.Action("Chitiettour","Home")" class="xemthem pull-right">Đăng ký</a>
+                    <div class="xemthem">
+                        <a href="@Url.Action("Chitiettour","Home")" id="xemthem" class="pull-right">Đăng ký</a>
+                    </div>
                 </div>
             </div>
             <!--Tour-->
@@ -63,7 +67,9 @@
                             <p class="giatien">70.000.000 vnđ</p>
                         </div>
                     </div>
-                    <a href="@Url.Action("Chitiettour","Home")" class="xemthem pull-right">Đăng ký</a>
+                    <div class="xemthem">
+                        <a href="@Url.Action("Chitiettour","Home")" id="xemthem" class="pull-right">Đăng ký</a>
+                    </div>
                 </div>
             </div>
             <!--Tour-->
@@ -80,7 +86,9 @@
                             <p class="giatien">30.000.000 vnđ</p>
                         </div>
                     </div>
-                    <a href="@Url.Action("Chitiettour","Home")" class="xemthem pull-right">Đăng ký</a>
+                    <div class="xemthem">
+                        <a href="@Url.Action("Chitiettour","Home")" id="xemthem" class="pull-right">Đăng ký</a>
+                    </div>
                 </div>
             </div>
             <!--Tour-->
@@ -97,7 +105,9 @@
                             <p class="giatien">6.000.000 vnđ</p>
                         </div>
                     </div>
-                    <a href="@Url.Action("Chitiettour","Home")" class="xemthem pull-right">Đăng ký</a>
+                    <div class="xemthem">
+                        <a href="@Url.Action("Chitiettour","Home")" id="xemthem" class="pull-right">Đăng ký</a>
+                    </div>
                 </div>
             </div>
             <!--Tour-->
@@ -114,7 +124,9 @@
                             <p class="giatien">4.500.000 vnđ</p>
                         </div>
                     </div>
-                    <a href="@Url.Action("Chitiettour","Home")" class="xemthem pull-right">Đăng ký</a>
+                    <div class="xemthem">
+                        <a href="@Url.Action("Chitiettour","Home")" id="xemthem" class="pull-right">Đăng ký</a>
+                    </div>
                 </div>
             </div>
         </div>
