--- a/HoaBanTravel/HoaBanTravel/Views/Home/Dulichmienbac.cshtml
+++ b/HoaBanTravel/HoaBanTravel/Views/Home/Dulichmienbac.cshtml
@@ -14,7 +14,7 @@
         <!--Các tour-->
         <div class="cactour">
             <!--Tour-->
-            <div id="tour" class="tour col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="tour col-xs-12 col-sm-6 col-md-4 col-lg-4">
                 <img src="~/Content/images/trangchu/avt-tour-1.png" alt="" class="img-responsive" />
                 <div class="thongtin row">
                     <ul class="text">
@@ -24,7 +24,9 @@
                         <li><span>Ngày xuất phát:</span> 30/1/2017</li>
                         <li class="gia">5.300.000 vnđ</li>
                     </ul>
-                    <a href="@Url.Action("Chitiettour","Home")" id="xemthem" class="xemthem pull-right">Đăng ký</a>
+                    <div class="xemthem">
+                        <a href="@Url.Action("Chitiettour","Home")" id="xemthem" class="pull-right">Đăng ký</a>
+                    </div>
                 </div>
             </div>
 
@@ -39,7 +41,9 @@
                         <li><span>Ngày xuất phát:</span> 30/1/2017</li>
                         <li class="gia">5.300.000 vnđ</li>
                     </ul>
-                    <a href="@Url.Action("Chitiettour","Home")" class="xemthem pull-right">Đăng ký</a>
+                    <div class="xemthem">
+                        <a href="@Url.Action("Chitiettour","Home")" id="xemthem" class="pull-right">Đăng ký</a>
+                    </div>
                 </div>
             </div>
 
@@ -54,7 +58,9 @@
                         <li><span>Ngày xuất phát:</span> 30/1/2017</li>
                         <li class="gia">5.300.000 vnđ</li>
                     </ul>
-                    <a href="@Url.Action("Chitiettour","Home")" class="xemthem pull-right">Đăng ký</a>
+                    <div class="xemthem">
+                        <a href="@Url.Action("Chitiettour","Home")" id="xemthem" class="pull-right">Đăng ký</a>
+                    </div>
                 </div>
             </div>
 
@@ -69,7 +75,9 @@
                         <li><span>Ngày xuất phát:</span> 30/1/2017</li>
                         <li class="gia">5.300.000 vnđ</li>
                     </ul>
-                    <a href="@Url.Action("Chitiettour","Home")" class="xemthem pull-right">Đăng ký</a>
+                    <div class="xemthem">
+                        <a href="@Url.Action("Chitiettour","Home")" id="xemthem" class="pull-right">Đăng ký</a>
+                    </div>
                 </div>
             </div>
 
@@ -84,7 +92,9 @@
                         <li><span>Ngày xuất phát:</span> 30/1/2017</li>
                         <li class="gia">5.300.000 vnđ</li>
                     </ul>
-                    <a href="@Url.Action("Chitiettour","Home")" class="xemthem pull-right">Đăng ký</a>
+                    <div class="xemthem">
+                        <a href="@Url.Action("Chitiettour","Home")" id="xemthem" class="pull-right">Đăng ký</a>
+                    </div>
                 </div>
             </div>
 
@@ -99,7 +109,9 @@
                         <li><span>Ngày xuất phát:</span> 30/1/2017</li>
                         <li class="gia">5.300.000 vnđ</li>
                     </ul>
-                    <a href="@Url.Action("Chitiettour","Home")" class="xemthem pull-right">Đăng ký</a>
+                    <div class="xemthem">
+                        <a href="@Url.Action("Chitiettour","Home")" id="xemthem" class="pull-right">Đăng ký</a>
+                    </div>
                 </div>
             </div>
         </div>
